responsive updates to header text. Update animations. Fix page overflows

--- a/src/scss/05-components/about/_about-department-list.scss
+++ b/src/scss/05-components/about/_about-department-list.scss
@@ -1,6 +1,7 @@
 .c-about-department-list {
   @include site-container;
   margin-bottom: 120px;
+  overflow-x: hidden;
 
   h2 {
     margin-bottom: 82px;
